<resources>
    <string name="app_name">UTS13319</string>
    <string name="a11_2021_13319">A11.2021.13319</string>
    <string name="list_motor">List Motor</string>
    <string name="image_motor">Image Motor</string>
    <string name="kode_motor">A01</string>
    <string name="nama_motor">Honda Vario 125</string>
    <string name="satuan_motor">unit</string>
    <string name="harga_motor">22350000</string>
    <string name="jumlah_motor">1</string>
    <string name="list_view">List View</string>
    <string name="grid_view">Grid View</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="total_jumlah">Total jumlah</string>
    <string name="rp_49000000">Rp. 49000000</string>
    <string name="beli">Beli</string>
    <string name="pt_a11_2021_13319">PT. A11.2021.13319</string>
    <string name="penjualan_motor">Penjualan Motor</string>
    <string name="yamaha_nmax">Yamaha Nmax</string>
    <string name="separator">:</string>
    <string name="beli_unit">Beli Unit</string>
    <string name="harga">Harga</string>
    <string name="_19200000">19200000</string>
    <string name="_3_unit">3 Unit</string>
    <string name="total">Total</string>
    <string name="_200000">200000</string>
    <string name="bayar">Bayar</string>
    <string name="_19500000">19500000</string>
    <string name="terima_kasih_anda_sudah_berkunjung">TERIMA KASIH ANDA SUDAH BERKUNJUNG</string>
    <string name="ppn">PPN</string>
    <string name="jumlah">Jumlah</string>
</resources>